@@ -125,7 +125,7 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         }
 
         if (getSystem() == null) {
-            throw new IllegalStateException(AccessControlBundle.get("error.AccessControlProfile.manager.required"));
+            throw new IllegalStateException(AccessControlBundle.get("error.AccessControlProfile.system.required"));
         }
 
         if (StringUtils.isNotBlank(getCustomExpression()) && StringUtils.isBlank(getCustomExpressionValidator())) {
@@ -164,33 +164,8 @@ public class AccessControlProfile extends AccessControlProfile_Base implements P
         return Boolean.TRUE.equals(getRestricted());
     }
 
-    // @Deprecated boolean isLocked() will be replaced by boolean isSystem()
-    @Deprecated
-    public boolean isLocked() {
-        return isSystem();
-    }
-
     public boolean isSystem() {
         return Boolean.TRUE.equals(getSystem());
-    }
-
-    // @Deprecated Boolean getLocked() will be replaced by Boolean getSystem()
-    @Deprecated
-    @Override
-    public Boolean getLocked() {
-        return Optional.ofNullable(getSystem()).orElseGet(() -> super.getLocked());
-    }
-
-    // @Deprecated void setLocked(Boolean locked) will be replaced by void setSystem(Boolean system)
-    @Deprecated
-    @Override
-    public void setLocked(Boolean locked) {
-        if (locked == null) {
-            super.setLocked(null);
-            return;
-        }
-
-        setSystem(locked);
     }
 
     public boolean isAutoGenerated() {
