@@ -12,6 +12,7 @@ error.AccessControlProfile.name.required = Name is required
 error.AccessControlProfile.code.required = Code is required
 error.AccessControlProfile.code.exists = Code {0} already exists
 error.AccessControlProfile.manager.required = Manager is required
+error.AccessControlProfile.system.required = System is required
 error.AccessControlProfile.delete = You cannot delete a profile that has parent profiles. Parent profiles are: 
 error.AccessControlProfile.delete.protected = You cannot delete a protected profile 
 error.AccessControlProfile.addProfileToItself = Unable to add profile {0} to itself
