@@ -1,3 +1,6 @@
+- Refactor: Removes code related to AccessControlProfile's deprecated locked attribute [#qubIT-Omnis-6993]
+- Refactor: Makes AccessControlProfile's system attribute required in the DML [#qubIT-Omnis-7160] 
+
 2.4.1 (28-10-2024)
 - Refactor: Makes isRestricted and isAutoGenerated methods in AccessControlPermission return boolean [#qubIT-Omnis-7088]
 - Bug fix: Ensures NPEs are not thrown in isRestricted method in AccessControlProfile [#qubIT-Omnis-7116]
